<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/WhiteBrown">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_icon"
        android:layout_width="259dp"
        android:layout_height="142dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:src="@drawable/rantdemologo2"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_Button"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
        android:text="@string/login" />

    <Button
        android:id="@+id/face_btn"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_button"
        android:layout_below="@id/login_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login_with_facebook"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/twitter_btn"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:background="@drawable/twitter_button"
        android:layout_below="@id/face_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/tweet_login"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:layout_below="@id/twitter_btn"
        android:text="@string/register_text"
        android:textColor="#800000"
        android:textSize="20sp" />

</RelativeLayout>