<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/WhiteBrown">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="170dp"
        android:layout_height="105dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="118dp"
        android:src="@drawable/rantdemologo1"
        android:id="@+id/register_icon"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_icon"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buttons"
        android:text="@string/create_account"
        android:id="@+id/register_create_account"/>


</RelativeLayout>